[metadata]
name = kwapi
version = 2013.7
summary = Energy framework for OpenStack
description-file =
    README.rst
author = François Rossigneux
author-email = francois.rossigneux@inria.fr
home-page = https://launchpad.net/kwapi
classifier =
    Development Status :: 4 - Beta
        Environment :: OpenStack
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    kwapi

[entry_points]
console_scripts =
    kwapi-api = kwapi.plugins.api.app:start
    kwapi-drivers = kwapi.drivers.driver_manager:start
    kwapi-forwarder = kwapi.forwarder:start
    kwapi-rrd = kwapi.plugins.rrd.app:start

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
